Wipe out WipeStoreCopyIfOutdated.

Password Manager ignores saving of Chrome sync credentials. But if
accounts.google.com credentials were saved before signing in in Chrome,
they persist. Which may lead to the problem, that after changing
password, saved sync credentials become obsolete. For this reason it
was introduced wiping such credentials if Password Manager found
submission with different password. The problem that it assumes that
Password Manager always correctly detects success of password form
submission on accounts.google.com. That's not true anymore. As result
valid credentials might be removed. In the current setup probability
of this is low, but with other changes it might become much bigger, for
example https://crbug.com/871191 is example. So it's the time to remove
wiping.

Bug: 871191, 875768, 458279
Change-Id: I24c096f6202bf21a89d091932b22984eed8efe0a
Reviewed-on: https://chromium-review.googlesource.com/1183308
Reviewed-by: Ilya Sherman <isherman@chromium.org>
Reviewed-by: Vaclav Brozek <vabr@chromium.org>
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586871}
Former-commit-id: c6ccb877f3fb45516a98384ae016f0e1831bc376