components/password_manager/core/browser/stub_form_saver.h
@@ -30,10 +30,6 @@ class StubFormSaver : public FormSaver {
   void PresaveGeneratedPassword(
       const autofill::PasswordForm& generated) override {}
   void RemovePresavedPassword() override {}
-  void WipeOutdatedCopies(
-      const autofill::PasswordForm& pending,
-      std::map<base::string16, const autofill::PasswordForm*>* best_matches,
-      const autofill::PasswordForm** preferred_match) override {}
   std::unique_ptr<FormSaver> Clone() override;
 
  private:
